# mighty-hooks

./: .gitignore  Cargo.toml  README.md  book.toml
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  signing.rs  tls.rs
crates/dispatch/: Cargo.toml
crates/dispatch/src/: lib.rs  reword.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs
docs/: SUMMARY.md  config.md  index.md  rewording.md
src/: args.rs  main.rs
