[package]
name = "mighty-hooks"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "crates/*",
]

[dependencies]
mighty-hooks-config = { path = "./crates/config" }
mighty-hooks-server = { path = "./crates/server" }
tokio = { version = "1.25", features=["macros", "rt-multi-thread"] }
log = "0.4"
env_logger = "0.10"
