[package]
name = "mighty-hooks-dispatch"
version = "0.1.0"
edition = "2021"

[dependencies]
mighty-hooks-config = { path = "../config" }
mighty-hooks-core = { path = "../core" }
log = "0.4"
reqwest = "^0.11.14"
futures = "^0.3.26"
tera = { version = "^1.17.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1.0.93"
